@startuml

class User {
    + username: String
    + email: String
    + password: String
}

class Event {
    + name: String
    + location: String
    + date: Date
    + organizer: ObjectId (ref: User)
    + attendees: [ObjectId] (ref: User)
}

class Friendship {
    + user: ObjectId (ref: User)
    + friend: ObjectId (ref: User)
}

class Image {
    + event: ObjectId (ref: Event)
    + user: ObjectId (ref: User)
    + imageUrl: String
}

class AirQuality {
    + location: String
    + timestamp: Date
    + SO2: Number
    + CO: Number
    + PM10: Number
    + PM25: Number
    + O3: Number
    + NO2: Number
    + benzene: Number
}

User "1" -- "*" Friendship
User "1" -- "*" Event
User "1" -- "*" Image
Event "1" -- "*" Image
Event "1" -- "*" AirQuality

@enduml